@@ -10,14 +10,14 @@
 
 <h2 class="fancy">Client Tools</h2>
 <p>cocos Live client is included within the <span style="font-style:italic;">cocos2d for iPhone</span> package. You can download the latest version here:</p>
-<div style='padding:5px; background-color:#eee'><span style='font-weight:bold'>Download:</span> <a href="http://code.google.com/p/cocos2d-iphone">http://code.google.com/p/cocos2d-iphone</a></div>
+<div style='padding:5px; background-color:#eee'><span style='font-weight:bold'>Download:</span> <a href="http://www.cocos2d-iphone.org/download/">http://www.cocos2d-iphone.org/download</a></div>
 <br/>
 
-<p>For information on how to use, please read this post: <a href="http://blog.sapusmedia.com/2009/02/cocos-live-high-score-server-for.html">cocos Live: a high score server for cocos2d</a>. The client is coded in objective-c and can be used with <a href="http://code.google.com/p/cocos2d-iphone">cocos2d</a> or with any other engine like <a href="http://code.google.com/p/sio2">SIO2</a> or <a href="http://code.google.com/p/oolongengine">Oolong</a>.</p>
+<p>For information on how to use, please read this post: <a href="http://blog.sapusmedia.com/2009/02/cocos-live-high-score-server-for.html">cocos Live: a high score server for cocos2d</a>. The client is coded in objective-c and can be used with <a href="http://www.cocos2d-iphone.org">cocos2d</a> or with any other engine like <a href="http://code.google.com/p/sio2">SIO2</a> or <a href="http://code.google.com/p/oolongengine">Oolong</a>.</p>
 
 Useful links:
 <ul>
-  <li><a href="http://www.cocos2d-iphone.com/forum">http://www.cocos2d-iphone.com/forum</a></li>
+  <li><a href="http://www.cocos2d-iphone.org/forum/forum/4">cocos Live forum</a></li>
   <li><a href="http://code.google.com/p/cocoslive">cocos Live source code</a></li>
 </ul>
 
